# glibc

./: ChangeLog  ChangeLog.backport  ChangeLog.x32  EGLIBC.option-groups  GLIBC.cross-building  GLIBC.cross-testing  INSTALL  Makeconfig  Makefile  Makerules  NEWS  README.grte  Rules  SHARED-FILES  config.h.in  config.make.in  configure  configure.ac  configure.in  extra-lib.mk  gen-gconv-modules.mk  option-groups.def  option-groups.mak  shlib-versions  test-skeleton.c  version.h
ChangeLog.old/: ChangeLog.32  ChangeLog.33
advisories/: GLIBC-SA-2026-0003  GLIBC-SA-2026-0004  GLIBC-SA-2026-0012  GLIBC-SA-2026-0013  GLIBC-SA-2026-0014
argp/: Makefile  argp-fmtstream.c  argp-help.c  argp-namefrob.h  argp-parse.c  argp.h
assert/: Makefile  assert.c  assert.h  test-assert-c++-variadic.cc  tst-assert-c++.cc
benchtests/: Makefile  bench-memchr.c  bench-memcmp.c  bench-memcpy.c  bench-memmove.c  bench-qsort.c  bench-strcasestr.c  bench-string.h  bench-strstr.c  bench-timing.h  cos-inputs  cosh-inputs  exp10f-inputs  sin-inputs  sinh-inputs  tan-inputs  tanh-inputs
bits/: _G_config.h  dlfcn.h  errno.h  in.h  resource.h  select.h  socket.h  stdio-lock.h  sysmacros.h  time64.h  timesize.h  timesizes.h  types.h  typesizes.h  uio_lim.h
catgets/: Makefile  gencat.c  open_catalog.c
conform/: Makefile
crypt/: Makefile  crypt-entry.c  crypt_common.c  crypt_util.c  sha256.c
csu/: Makefile  check_fds.c  init.c  libc-start.c  libc-tls.c  static-reloc.c
debug/: Makefile  backtrace.c  backtracesyms.c  confstr_chk.c  fortify_fail.c  read_chk.c  readlink_chk.c  segfault.c  (+9 more)
sysdeps/sparc/sparc32/: Makefile  __longjmp.S  configure  configure.ac  dl-machine.h  dl-plt.h  e_sqrt.c  setjmp.S  stackguard-macros.h
sysdeps/sparc/sparc32/fpu/multiarch/: s_llrint-generic.S  s_llrintf-generic.S  s_nearbyint-generic.S  s_nearbyintf-generic.S  s_rint-generic.S  s_rintf-generic.S
sysdeps/sparc/sparc32/multiarch/: memcpy-ultra1.S  memmove-ultra1.S  memset-ultra1.S
sysdeps/sparc/sparc32/sparcv9/fpu/multiarch/: s_copysign-generic.S  s_copysign.c  s_copysignf-generic.S  s_copysignf.c  s_fabs-generic.S  s_fabs.c  s_fabsf-generic.S  s_fabsf.c  s_llrint-generic.S  s_llrint.c  s_llrintf-generic.S  s_llrintf.c  s_nearbyint-generic.S  s_nearbyint.c  s_nearbyintf-generic.S  s_nearbyintf.c  s_rint-generic.S  s_rint.c  s_rintf-generic.S  s_rintf.c
sysdeps/sparc/sparc32/sparcv9/multiarch/: memcpy-ultra1.S  memset-ultra1.S
sysdeps/unix/sysv/linux/powerpc/powerpc64/: Versions  arch-syscall.h  clone.S  clone3.S  configure  configure.ac  getcontext.S  kernel_stat.h  setcontext.S  swapcontext.S  sysdep.h  vfork.S
sysdeps/unix/sysv/linux/powerpc/powerpc64/be/: libc.abilist  libpthread.abilist
sysdeps/unix/sysv/linux/powerpc/powerpc64/e5500/fpu/: Implies
sysdeps/unix/sysv/linux/powerpc/powerpc64/e6500/fpu/: Implies
sysdeps/unix/sysv/linux/powerpc/powerpc64/fpu/: fe_mask.c  fe_nomask.c
sysdeps/unix/sysv/linux/powerpc/powerpc64/le/: libc.abilist  libm.abilist  libpthread.abilist
sysdeps/x86_64/: Makefile  Versions  __longjmp.S  configure  configure.ac  dl-irel.h  dl-machine.h  dl-tls.c  dl-tls.h  dl-trampoline.S  dl-trampoline.h  libc-start.h  localplt.data  memchr.S  memcpy.S  pointer_guard-asm.h  setjmp.S  stackguard-macros.h  stackinfo.h  strcmp.S  strrchr.S  sysdep.h  tls_get_addr.h  wcharP.h  wcslen.S  wcsrchr.S  wmemchr.S
sysdeps/x86_64/bits/: link.h  mathdef.h
sysdeps/x86_64/fpu/: Makefile  e_powl.S  e_sqrt.c  e_sqrtf.c  math_ldbl.h  math_private.h  test-double-libmvec-sincos-avx512-main.c  test-libmvec-alias-main.c  test-libmvec-alias.c
sysdeps/x86_64/fpu/bits/: fenv.h  mathinline.h
sysdeps/x86_64/fpu/multiarch/: Makefile  e_asin.c  e_atan2.c  e_exp.c  e_exp2f.c  e_expf.c  e_log.c  e_log2f.c  e_logf.c  e_pow.c  e_powf.c  svml_d_sincos8_core_avx512.S  svml_s_sincosf16_core_avx512.S
sysdeps/x86_64/multiarch/: Makefile  dl-symbol-redir-ifunc.h  ifunc-impl-list.c  ifunc-strcmp.h  memchr-sse2.S  memchr.c  memcmp-avx2-movbe-new.S  memcmp-sse4.S  memcpy-avx-unaligned.S  memcpy-avx512-no-vzeroupper.S  memcpy-sse2-unaligned-1.S  memcpy-sse2-unaligned.S  memcpy-ssse3-back.S  memcpy-ssse3.S  memcpy.S  memcpy_chk.S  memmove-avx512-unaligned-erms.S  memmove-vec-unaligned-erms.S  memmove.S  mempcpy.S  mempcpy_chk.S  memrchr.c  memset-2.17.S  memset-avx512-unaligned-erms.S  memset-vec-unaligned-erms.S  memset.S  rawmemchr-sse2.S  rawmemchr.c  strcasecmp.c  strcasecmp_l.c  strchr-sse2.S  strchr.c  strchrnul.c  strcmp-avx.S  strcmp-sse42.S  strcmp.c  strcpy-sse2-unaligned.S  strlen-sse2.S  strlen.c  strncase.c  (+20 more)
sysdeps/x86_64/nptl/: tcb-offsets.sym  tls.h
sysdeps/x86_64/x32/: dl-machine.h
(+3761 files in other folders)
